--- a/src/css/utilities/utils.css
+++ b/src/css/utilities/utils.css
@@ -84,3 +84,8 @@
 .inline-block {
     display: inline-block;
 }
+
+/* Misc */
+.w-100 {
+    width: 100%;
+}
